--- a/dojo.react/package.json
+++ b/dojo.react/package.json
@@ -3,20 +3,19 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
-    "scripts":
-    {
+    "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
-    "dependencies":
-    {
+    "dependencies": {
+        "@fluentui/react-components": "^9.54.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
-    "devDependencies":
-    {
+    "devDependencies": {
+        "@types/node": "^20.12.2",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -26,7 +25,6 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "typescript": "^5.2.2",
-        "vite": "^5.2.0",
-        "@types/node": "^20.12.2"
+        "vite": "^5.2.0"
     }
 }
